[package]
name = "xsip"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "string"] }
atty = "0.2.14"
notify = "6.1.1"
chrono = "0.4.38"
indexmap = "2.2.6"
ipnet = "2.9.0"
flate2 = "1.0.30"
colored = "2.1.0"
